--- a/stack.yaml
+++ b/stack.yaml
@@ -8,6 +8,7 @@ packages:
     extra-dep: true
 
 extra-deps:
+  - selda-0.1.11.2
   - sized-0.2.1.1
   - equational-reasoning-0.5.0.0
   - monomorphic-0.0.3.3
