--- a/web3-psql.cabal
+++ b/web3-psql.cabal
@@ -15,9 +15,11 @@ extra-source-files:  README.md
 
 executable web3-psql
   hs-source-dirs:      src
+  ghc-options:         -Wall
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , generics-sop
                      , selda
+                     , selda-postgresql
                      , web3
