--- a/web3-psql.cabal
+++ b/web3-psql.cabal
@@ -18,6 +18,7 @@ executable web3-psql
   ghc-options:         -Wall
   main-is:             Main.hs
   other-modules:       Contracts.ERC20
+                     , Orphans
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , generics-sop
