--- a/web3-psql.cabal
+++ b/web3-psql.cabal
@@ -21,6 +21,7 @@ executable web3-psql
                      , Orphans
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+                     , errors
                      , generics-sop
                      , selda
                      , selda-postgresql
