--- a/web3-psql.cabal
+++ b/web3-psql.cabal
@@ -17,7 +17,8 @@ executable web3-psql
   hs-source-dirs:      src
   ghc-options:         -Wall
   main-is:             Main.hs
-  other-modules:       Contracts.ERC20
+  other-modules:       Config
+                     , Contracts.ERC20
                      , Orphans
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
