--- a/web3-psql-example.cabal
+++ b/web3-psql-example.cabal
@@ -1,8 +1,8 @@
-name:                web3-psql
+name:                web3-psql-example
 version:             0.1.0.0
 -- synopsis:
 -- description:
-homepage:            https://github.com/githubuser/web3-psql#readme
+homepage:            https://github.com/githubuser/web3-psql-example#readme
 license:             BSD3
 license-file:        LICENSE
 author:              Author name here
