--- a/stack.yaml
+++ b/stack.yaml
@@ -3,8 +3,8 @@ resolver: lts-9.10
 packages:
   - '.'
   - location:
-      git: https://github.com/f-o-a-m/hs-web3
-      commit: 0e1515ca45f89523ede2926fdc0b033139cd592d
+      git: https://github.com/airalab/hs-web3
+      commit: 68e774da1bc30563c0d1240c997b6e07e6b2b1d0
     extra-dep: true
   - location:
       git: https://github.com/f-o-a-m/selda
