--- a/web3-psql-example.cabal
+++ b/web3-psql-example.cabal
@@ -23,6 +23,7 @@ executable web3-psql
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , errors
+                     , data-default
                      , generics-sop
                      , selda
                      , selda-postgresql
