--- a/web3-psql-example.cabal
+++ b/web3-psql-example.cabal
@@ -29,3 +29,4 @@ executable web3-psql
                      , selda-postgresql
                      , text
                      , web3
+                     , radar-relay-client
