--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,6 +1,7 @@
-FROM ubuntu:zesty
+FROM ubuntu:latest
 RUN mkdir -p /opt/app
 WORKDIR /opt/app
 RUN apt-get update && apt-get install -y \
   ca-certificates \
-  libgmp-dev
+  libgmp-dev \
+  libpq-dev
