--- a/stack-native.yaml
+++ b/stack-native.yaml
@@ -7,3 +7,30 @@ image:
     add:
       static/: /opt/app/static
       config/: /opt/app/config
+resolver: lts-10.0
+
+packages:
+  - '.'
+  - location:
+      git: https://github.com/airalab/hs-web3
+      commit: 68e774da1bc30563c0d1240c997b6e07e6b2b1d0
+    extra-dep: true
+  - location:
+      git: https://github.com/f-o-a-m/selda
+      commit: 64993ae4f4249df1222691fcb6341367fb8c68d4
+      subdirs:
+        - selda 
+        - selda-postgresql
+    extra-dep: true
+  - location:
+      git: https://github.com/blinky3713/relay-api
+      commit: 76f5f5b2044b4bfa9fc6231fc67b8b95c9efbda9 
+    extra-dep: true
+
+extra-deps:
+  - sized-0.2.1.1
+  - equational-reasoning-0.5.0.0
+  - monomorphic-0.0.3.3
+  - type-natural-0.7.1.4
+  - presburger-1.3.1
+  - ghc-typelits-presburger-0.1.1.1
