--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       args:
         - BINARY_PATH
     image: foam/token-indexer 
-    command: web3-psql
+    command: createdb -h localhost -p 5432 -U postgres erc20; web3-psql
     environment:
       - PG_HOST=localhost
       - PG_PORT=5432
@@ -16,3 +16,4 @@ services:
       - PG_DATABASE=erc20
       - PG_PASSWORD=password
       - NODE_URL="https://mainnet.infura.io/7QHpybCROfXKpT7hNUfm:8545"
+      - CONTRACT_ADDRESS="0x12459C951127e0c374FF9105DdA097662A027093"
