--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,18 @@
-version: '2'
+version: '2.1'
 services:
   postgres:
     image: sheerun/awesome-postgres:9.5
+    volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql1
   token-indexer:
     build:
       context: .
       args:
         - BINARY_PATH
-    image: foam/token-indexer 
+    image: foam/token-indexer
+    depends_on:
+      postgres:
+        condition: service_started
     command: createdb -h localhost -p 5432 -U postgres erc20; web3-psql
     environment:
       - PG_HOST=localhost
